# drywall

./: .gitignore  .mise.toml  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  swarm
.agents/: backlog.md  ledger-project.md  ledger-swarmforge.md  ledger.md
.cargo/: mutants.toml
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
00/2d03f42c9b/: metadata.json
00/521df8220d/: metadata.json
01/9ed265b704/: metadata.json
02/aa4dec2402/: metadata.json
05/c0bac62acb/: metadata.json
07/13f15cb0e8/: metadata.json
08/8e84db2485/: metadata.json
0b/3793804b05/: metadata.json
0c/ba23fc2eba/: metadata.json
0d/92693af06f/: metadata.json
11/52a8c99c11/: metadata.json
11/baea5dcd12/: metadata.json
12/0e42215ea0/: metadata.json
12/1d81266ae7/: metadata.json
12/c35b395176/: metadata.json
15/14251e7822/: metadata.json
16/64f769d747/: metadata.json
16/bbee608d4f/: metadata.json
docs/: qa-findings-jsts-detection.md
features/: cli_surface.feature  cli_surface.qa.md  duplicate_detection.feature  duplicate_detection.qa.md  jsts_detection.feature  jsts_detection.qa.md  python_detection.feature  python_detection.qa.md  scaffold_cli.feature  scaffold_cli.qa.md
src/: ast.rs  core.rs  lib.rs  main.rs  scan.rs
swarmforge/: swarmforge.conf
tests/: ast_property_test.rs  cli_surface_exclusions_auto_built_in_gitignore_and_repeatable_exclude_acceptance_test.rs  core_property_test.rs  javascript_and_typescript_duplicate_detection_acceptance_test.rs  mutation_hardening_test.rs  parse_rust_source_property_test.rs  python_duplicate_detection_acceptance_test.rs  rust_duplicate_detection_acceptance_test.rs  scaffold_cli_invocation_acceptance_test.rs  scan_property_test.rs
(+660 files in other folders)
