[package]
name = "drywall"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drywall"
path = "src/main.rs"

[lib]
name = "drywall"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
regex = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
globset = "0.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"

[dev-dependencies]
proptest = "1"
tempfile = "3"
