[package]
name = "drywall"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "drywall"
path = "src/main.rs"

[lib]
name = "drywall"
path = "src/lib.rs"

[dependencies]
rayon = "=1.12.0"
tree-sitter = "=0.26.9"
tree-sitter-rust = "=0.24.2"
regex = "=1.12.4"
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
ignore = "=0.4.26"
globset = "=0.4.18"
tree-sitter-javascript = "=0.25.0"
tree-sitter-typescript = "=0.23.2"
tree-sitter-python = "=0.25.0"

[dev-dependencies]
proptest = "=1.11.0"
tempfile = "=3.27.0"
